--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ authors = ["vikornienko <vikornienko76@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^4.1.1"
+python-dotenv = "^0.21.0"
 
 [tool.poetry.dev-dependencies]
+pytest-django = "^4.5.2"
+pytest-selenium = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
