--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["vikornienko <vikornienko76@gmail.com>"]
 python = "^3.9"
 Django = "^4.1.1"
 python-dotenv = "^0.21.0"
+sentry-sdk = "^1.9.8"
 
 [tool.poetry.dev-dependencies]
 pytest-django = "^4.5.2"
