--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Django = "^4.1.1"
 python-dotenv = "^0.21.0"
 sentry-sdk = "^1.9.8"
+django-debug-toolbar = "^3.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest-django = "^4.5.2"
