--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-debug-toolbar = "^3.6.0"
 [tool.poetry.dev-dependencies]
 pytest-django = "^4.5.2"
 pytest-selenium = "^3.0.0"
+django-extensions = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
