--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-debug-toolbar = "^3.6.0"
 pytest-django = "^4.5.2"
 pytest-selenium = "^3.0.0"
 django-extensions = "^3.2.1"
+Werkzeug = "^2.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
